# nns_sync

./: Cargo.toml  README.md  config.json
candid/: ledger.did  registry.did  root.did
cap_sync/: Cargo.toml
src/: ledger.rs  main copy.rs  main.rs  registry.rs  types.rs
