[package]
name = "nns_sync"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
prost = "0.9.0"
serde_json = "1.0"
candid = "0.7.10"
ic-agent = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.8.1", features = ["full"] }
ic-protobuf = { git="https://github.com/dfinity/ic" }
ic-types = { git="https://github.com/dfinity/ic" }
ic-registry-transport = { git="https://github.com/dfinity/ic" }
ic-registry-keys = { git="https://github.com/dfinity/ic" }
ic-nns-constants = { git="https://github.com/dfinity/ic" }
ic-nns-common = { git="https://github.com/dfinity/ic" }
ic-base-types = { git="https://github.com/dfinity/ic" }
